--- a/src/sass/layouts/_general-layout.scss
+++ b/src/sass/layouts/_general-layout.scss
@@ -1,7 +1,16 @@
 .header {
   @include flex-center;
 }
-
+.header {
+  border: 2px red dotted;
+  @include flex-center;
+  width: 100vw;
+}
+.gallery {
+  border: 2px black dotted;
+  width: 100%;
+  height: 5rem;
+}
 h1 {
   font-size: medium;
 }
