--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -1,5 +1,11 @@
 body {
   width: 100vw;
   height: 100vh;
-  @include flex-center;
+  border: 2px yellow dashed;
+}
+.wrapper {
+  border: 2px green dashed;
+  width: 100%;
+  margin: 0 auto;
+  height: 100%;
 }
