--- a/src/sass/layouts/_general-layout.scss
+++ b/src/sass/layouts/_general-layout.scss
@@ -4,20 +4,19 @@
 .header {
   // margin: 0 auto;
   border: 2px red dotted;
-  width: 100vw;
-  height: 7vh;
+  width: 100%;
+  height: 80px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
-  flex-direction: row-reverse;
 }
 .header li {
   display: inline;
 }
-.header nav ul {
-  width: 100vw;
+.header ul {
+  width: 30%;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 .gallery {
   border: 2px black dotted;
@@ -28,8 +27,8 @@ h1 {
   font-size: medium;
 }
 input[type="text"] {
-  border: none;
-  width: 18rem;
+  border: 1px solid grey;
+  width: 200px;
   height: 1.8rem;
   font-size: 1.1rem;
 }
