--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -3,3 +3,40 @@ body {
   height: 100vh;
   border: 2px yellow dashed;
 }
+.header {
+  // margin: 0 auto;
+  border: 2px red dotted;
+  width: 100%;
+  height: 3.2rem;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.mainContainer {
+  border: 2px red dashed;
+  width: 100%;
+  // height: 29.6rem;
+  height: 92vh;
+}
+
+.mainHeader {
+  border: 2px cornflowerblue dotted;
+  margin: auto;
+  display: flex;
+  justify-items: center;
+  // align-items: center;
+  width: 60rem;
+
+  height: 29.6rem;
+  // height: 92vh;
+}
+.galleryContainer {
+  border: 2px forestgreen dashed;
+  margin: auto;
+  display: flex;
+  justify-items: center;
+  // align-items: center;
+  width: 60rem;
+  height: 7rem;
+}
