--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -23,8 +23,8 @@ body {
 .mainHeader {
   border: 2px cornflowerblue dotted;
   margin: auto;
-  display: flex;
-  justify-items: center;
+  // display: flex;
+  // justify-items: center;
   // align-items: center;
   width: 60rem;
 
@@ -33,18 +33,31 @@ body {
 }
 .subHeader {
   border: 2px deeppink dotted;
-  margin-top: 16rem;
-  display: flex;
-  justify-content: center;
-  width: 60rem;
+  margin-top: 15rem;
+  // display: flex;
+  // justify-content: center;
+  width: 100%;
   height: 12rem;
 }
 .galleryContainer {
   border: 2px forestgreen dashed;
   margin: auto;
-  display: flex;
-  justify-items: center;
+  // display: flex;
+  // justify-items: center;
   // align-items: center;
   width: 60rem;
   height: 7rem;
+}
+.linkGallery {
+  border: 2px gray double;
+  margin-top: -1rem;
+  // display: flex;
+  // justify-content: center;
+  width: 100%;
+  height: 2rem;
+}
+.photosgallery {
+  border: 2px rosybrown dotted;
+  margin-top: -1rem;
+  height: 6rem;
 }
