--- a/src/sass/layouts/_general-layout.scss
+++ b/src/sass/layouts/_general-layout.scss
@@ -6,11 +6,25 @@
   display: inline;
 }
 .header ul {
-  width: 30%;
+  width: 10%;
   display: flex;
   justify-content: space-evenly;
 }
-
+.logoNav {
+  border: 2px blue dashed;
+  margin-left: 1px;
+  display: flex;
+  padding-right: 110px;
+  // position: absolute;
+}
+.search {
+  border: 10px red;
+  display: flex;
+  // justify-content: center;
+  // align-content: center;
+  // margin-left: 90px;
+  padding-right: 110px;
+}
 h1 {
   font-size: medium;
 }
