--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -9,9 +9,9 @@ body {
   width: 100%;
   height: 3.2rem;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
   align-items: center;
-  position: relative;
+  // position: relative;
 }
 
 .mainContainer {
