--- a/src/sass/layouts/_general-layout.scss
+++ b/src/sass/layouts/_general-layout.scss
@@ -12,25 +12,28 @@
 }
 .logoNav {
   border: 2px blue dashed;
-  margin-left: 1px;
+  margin-left: 60px;
   display: flex;
-  padding-right: 110px;
   // position: absolute;
 }
 .search {
-  border: 10px red;
-  display: flex;
+  border: 2px red dotted;
+  // display: flex;
   // justify-content: center;
+  // align-items: center;
   // align-content: center;
+  width: 12rem;
   // margin-left: 90px;
-  padding-right: 110px;
+  // padding-right: 110px;
 }
 h1 {
   font-size: medium;
 }
 input[type="text"] {
   border: 1px solid grey;
-  width: 200px;
+  width: 220px;
   height: 1.8rem;
-  font-size: 1.1rem;
+  font-size: 1rem;
+  text-align: center;
+  // @include flex-center;
 }
