--- a/src/sass/layouts/_general-layout.scss
+++ b/src/sass/layouts/_general-layout.scss
@@ -17,7 +17,7 @@
   // position: absolute;
 }
 .search {
-  border: 2px red dotted;
+  // border: 2px red dotted;
   // display: flex;
   // justify-content: center;
   // align-items: center;
@@ -30,8 +30,10 @@ h1 {
   font-size: medium;
 }
 input[type="text"] {
-  border: 1px solid grey;
-  width: 220px;
+  border: 1px solid lightgray;
+  background-color: rgba(211, 211, 211, 0.151);
+  border-radius: 3px;
+  width: 210px;
   height: 1.8rem;
   font-size: 1rem;
   text-align: center;
