--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -35,20 +35,28 @@ body {
 
 .pageLogoHeader {
   border: 2px palevioletred dotted;
+  display: flex;
   width: 100%;
   height: 10rem;
 }
 .LogoPage {
   border: 2px goldenrod dashed;
-  width: 2rem;
+  width: 10rem;
+  height: 10rem;
 }
 .pageLogoInfo {
   border: 2px crimson dashed;
   width: 20rem;
+  height: 3rem;
 }
 .pageInfo {
   border: 2px dodgerblue dashed;
-  height: 10rem;
+  margin: auto;
+  display: flex;
+  justify-content: flex-start;
+  align-self: center;
+  width: 25rem;
+  height: 15rem;
 }
 .subHeader {
   border: 2px deeppink dotted;
