desing boxes in Heder & subHeader & Gallery

--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -27,12 +27,12 @@ body {
   // display: flex;
   // justify-items: center;
   // align-items: center;
-  width: 58rem;
+  width: 59rem;
 
   height: 28.3rem;
   // height: 92vh;
 }
-
+//                                     === Hero Section ===
 .heroSection {
   border: 2px palevioletred dotted;
   display: flex;
@@ -67,6 +67,8 @@ body {
   width: 100%;
   height: 15rem;
 }
+
+//                                      === SubHeader ===
 .subHeader {
   border: 2px deeppink dotted;
   // margin-top: 15rem;
@@ -81,7 +83,7 @@ body {
   // display: flex;
   // justify-items: center;
   // align-items: center;
-  width: 60rem;
+  width: 59rem;
   height: 7rem;
 }
 .linkGallery {
