--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -77,6 +77,8 @@ body {
   width: 100%;
   height: 12rem;
 }
+//                                      === Gallery ===
+
 .galleryContainer {
   border: 2px forestgreen dashed;
   margin: auto;
