--- a/src/sass/layouts/_general-layout.scss
+++ b/src/sass/layouts/_general-layout.scss
@@ -26,6 +26,13 @@
   // margin-left: 90px;
   // padding-right: 110px;
 }
+
+.heroImage {
+  margin: auto;
+  display: flex;
+  // align-content: center;
+  width: 70%;
+}
 h1 {
   font-size: medium;
 }
