--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -53,6 +53,15 @@ body {
   border: 2px crimson dashed;
   width: 100%;
   height: 6rem;
+  ul {
+    display: flex;
+    justify-content: space-between;
+    // display: inline;
+    list-style-type: none;
+  }
+
+  // display: flex;
+  // justify-content: space-between;
 }
 .heroNumbers {
   border: 2px lawngreen dashed;
