--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -59,9 +59,6 @@ body {
     // display: inline;
     list-style-type: none;
   }
-
-  // display: flex;
-  // justify-content: space-between;
 }
 .heroNumbers {
   border: 2px lawngreen dashed;
@@ -106,14 +103,20 @@ body {
 }
 .linkGallery {
   border: 2px gray double;
-  margin-top: -1rem;
+  // margin-top: -1rem;
   // display: flex;
   // justify-content: center;
   width: 100%;
   height: 2rem;
+  ul {
+    display: flex;
+    justify-content: space-between;
+    // display: inline;
+    list-style-type: none;
+  }
 }
 .photosgallery {
   border: 2px rosybrown dotted;
-  margin-top: -1rem;
-  height: 6rem;
+  // margin-top: -1rem;
+  height: 100%;
 }
