--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -116,6 +116,10 @@ body {
   }
 }
 .photosgallery {
+  display: flex;
+  justify-content: space-between;
+  align-items: space-between;
+  flex-wrap: wrap;
   border: 2px rosybrown dotted;
   // margin-top: -1rem;
   height: 100%;
