--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -116,11 +116,19 @@ body {
   }
 }
 .photosgallery {
+  border: 2px rosybrown dotted;
+
   display: flex;
   justify-content: space-between;
-  align-items: space-between;
-  flex-wrap: wrap;
-  border: 2px rosybrown dotted;
+  gap: 2rem;
+  align-content: stretch;
+  flex-flow: row wrap;
+  // flex-wrap: wrap;
   // margin-top: -1rem;
-  height: 100%;
+  // height: 50rem;
+  // width: 100%;
+}
+#photogallery {
+  // border: 2px greenyellow solid;
+  width: 31%;
 }
