--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -12,6 +12,19 @@ body {
   justify-content: space-around;
   align-items: center;
   // position: relative;
+  nav ul {
+    border: 2px blue dotted;
+
+    display: flex;
+    justify-content: space-around;
+    width: 16rem;
+  }
+  nav ul li {
+    border: 2px darkturquoise dotted;
+
+    display: flex;
+    // justify-content: space-between;
+  }
 }
 
 .mainContainer {
