--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -13,14 +13,14 @@ body {
   align-items: center;
   // position: relative;
   nav ul {
-    border: 2px blue dotted;
+    // border: 2px blue dotted;
 
     display: flex;
     justify-content: space-around;
     width: 16rem;
   }
   nav ul li {
-    border: 2px darkturquoise dotted;
+    // border: 2px darkturquoise dotted;
 
     display: flex;
     // justify-content: space-between;
