--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -159,7 +159,8 @@ body {
 .linkGallery {
   border: 2px gray double;
   // margin-top: -1rem;
-  @include flex-center; // display: flex;
+  @include flex-center;
+  // display: flex;
   // justify-content: center;
   width: 100%;
   height: 2.5rem;
@@ -167,12 +168,27 @@ body {
     border: 2px violet dotted;
 
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
+    align-items: center;
 
-    width: 38rem;
+    width: 32rem;
     height: 2rem;
     // display: inline;
     list-style-type: none;
+  }
+  li {
+    border: 2px brown dashed;
+
+    // @include flex-center;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 6rem;
+    padding-left: 0.1rem;
+  }
+  .gallreyLinkImage {
+    padding-top: 0.18rem;
+    width: 1.2rem;
   }
 }
 .photosgallery {
