--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -36,7 +36,7 @@ body {
 }
 
 .mainHeader {
-  border: 2px darkslategrey dashed;
+  border: 0.12rem lightgray dotted;
   margin: 2.3rem auto;
   // display: flex;
   // justify-items: center;
@@ -148,7 +148,7 @@ body {
 //                                      === Gallery ===
 
 .galleryContainer {
-  border: 2px forestgreen dashed;
+  border-top: 0.12rem lightgray solid;
   margin: auto;
   // display: flex;
   // justify-items: center;
@@ -157,15 +157,15 @@ body {
   height: 7rem;
 }
 .linkGallery {
-  border: 2px gray double;
-  // margin-top: -1rem;
+  // border: 2px gray double;
+  margin-top: -0.62rem;
   @include flex-center;
   // display: flex;
   // justify-content: center;
   width: 100%;
   height: 2.5rem;
   ul {
-    border: 2px violet dotted;
+    // border: 2px violet dotted;
 
     display: flex;
     justify-content: space-around;
@@ -177,14 +177,21 @@ body {
     list-style-type: none;
   }
   li {
-    border: 2px brown dashed;
+    // border-top: 1px black solid;
 
-    // @include flex-center;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    width: 6rem;
-    padding-left: 0.1rem;
+    @include flex-center;
+    font-weight: bold;
+
+    // display: flex;
+    // justify-content: space-around;
+    // align-items: center;
+    // width: 5rem;
+    // padding-left: 0.1rem;
+    color: lightgray;
+  }
+  #activeGalleryLink {
+    border-top: 1px black solid;
+    color: black;
   }
   .gallreyLinkImage {
     padding-top: 0.18rem;
