--- a/src/sass/layouts/_general-layout.scss
+++ b/src/sass/layouts/_general-layout.scss
@@ -11,7 +11,7 @@
   justify-content: space-evenly;
 }
 .logoNav {
-  border: 2px blue dashed;
+  // border: 2px blue dashed;
   // margin-left: 60px;
   display: flex;
   // position: absolute;
