--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -164,7 +164,7 @@ body {
 }
 .linkGallery {
   // border: 2px gray double;
-  margin-top: -0.62rem;
+  margin-top: 0.2rem;
   @include flex-center;
   // display: flex;
   // justify-content: center;
@@ -172,6 +172,7 @@ body {
   height: 2.5rem;
   ul {
     // border: 2px violet dotted;
+    // margin-top: -0.9rem;
 
     display: flex;
     justify-content: space-around;
@@ -183,9 +184,11 @@ body {
     list-style-type: none;
   }
   li {
-    border-top: 1px black solid;
+    // border-top: 1px black solid;
+    margin-top: -0.3rem;
 
     @include flex-center;
+    gap: 0.3rem;
     font-weight: bold;
     font-size: 0.9rem;
 
@@ -196,13 +199,24 @@ body {
     // padding-left: 0.1rem;
     color: lightgray;
   }
-  #activeGalleryLink {
+  #aGLBorder {
+    margin-top: -0.1rem;
     border-top: 1px black solid;
+    height: 3rem;
+    @include flex-center;
+  }
+  #activeGalleryLink {
+    // margin-top: -0.3rem;
+    // padding-top: 1.3rem;
+
+    // border-top: 1px black solid;
     color: black;
+    // padding-bottom: 1.3rem;
   }
   .gallreyLinkImage {
-    padding-top: 0.18rem;
+    margin-top: -0.1rem;
     width: 1.2rem;
+    // height: 1rem;
   }
 }
 .photosgallery {
