--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -198,7 +198,9 @@ body {
     // width: 5rem;
     // padding-left: 0.1rem;
     color: lightgray;
+    // opacity: 0;
   }
+
   #aGLBorder {
     margin-top: -0.1rem;
     border-top: 1px black solid;
@@ -220,7 +222,7 @@ body {
   }
 }
 .photosgallery {
-  // border: 2px rosybrown dotted;
+  border: 2px rosybrown dotted;
   // @include flex-center;
   display: flex;
   // justify-content: space-between;
@@ -231,8 +233,59 @@ body {
   // margin-top: -1rem;
   // height: 50rem;
   // width: 100%;
+  opacity: 1;
+
+  // &:hover {
+  //   background-color: rgba(0, 0, 0, 0.7);
+  //   opacity: 0.5;
+  // }
+  li {
+    list-style-type: none;
+    width: 30%;
+  }
+}
+.image__overlay {
+  border: 2px rgb(47, 255, 255) solid;
+  // position: absolute;
+  // top: 0;
+  // left: 0;
+  // padding-top: -5rem;
+  margin-top: -1rem;
+  width: 100%;
+  height: 100%;
+  // background-color: rgba(0, 0, 0, 0.6);
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  // width: 100;
+
+  opacity: 1;
+
+  &:hover {
+    margin-top: -15rem;
+    background-color: rgba(0, 0, 0, 0.7);
+    opacity: 0.5;
+    transition: 0.5s;
+  }
+  .image__title {
+    border: 2px rgb(122, 112, 150) solid;
+    width: 5%;
+  }
 }
 #photogallery {
-  // border: 2px greenyellow solid;
-  width: 31%;
+  border: 2px greenyellow solid;
+  // position: absolute;
+  // top: 0;
+  // left: 0;
+  // width: 100%;
+  // height: 100%;
+  // background-color: rgba(0, 0, 0, 0.6);
+  // display: flex;
+  // align-items: center;
+  // justify-content: space-evenly;
+  // color: white;
+  width: 100%;
+
+  // list-style-type: none;
 }
