--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -183,6 +183,10 @@ body {
     // display: inline;
     list-style-type: none;
   }
+  a {
+    cursor: pointer;
+    text-decoration: none;
+  }
   li {
     // border-top: 1px black solid;
     margin-top: -0.3rem;
