--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -70,7 +70,7 @@ body {
   width: 100%;
 }
 .heroLogoInfo {
-  border: 2px crimson dashed;
+  // border: 2px crimson dashed;
   width: 100%;
   height: 6rem;
   ul {
